# hyperbolic_system_project

./: CMakeLists.txt  README.md
docs/: report_outline.md
scripts/: plot_results.py
src/: fluxes.cpp  fluxes.hpp  main.cpp  solver.cpp  solver.hpp  state.hpp
